--- a/imgui.ini
+++ b/imgui.ini
@@ -5,30 +5,30 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1443,1020
+ViewportPos=1351,738
 ViewportId=0xE927CF2F
 Size=588,404
-Collapsed=0
+Collapsed=1
 
 [Window][ControlPanel]
-ViewportPos=430,152
+ViewportPos=830,541
 ViewportId=0xA4D966FE
-Size=872,328
+Size=889,325
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][LOG]
-ViewportPos=430,152
+ViewportPos=830,541
 ViewportId=0xA4D966FE
-Pos=0,330
-Size=872,141
+Pos=0,327
+Size=889,140
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][EposEXO CAN 1]
-ViewportPos=1157,615
+ViewportPos=1035,23
 ViewportId=0x70428EA5
-Size=565,262
+Size=568,192
 Collapsed=0
 
 [Window][EposEXO 1]
@@ -38,31 +38,129 @@ Size=128,48
 Collapsed=0
 
 [Window][MarkovMao 1]
-ViewportPos=77,706
+ViewportPos=14,691
 ViewportId=0x1F07AB3F
-Size=966,277
+Size=855,298
 Collapsed=0
 
 [Window][ATIMX 1]
-ViewportPos=949,-889
+ViewportPos=1036,226
 ViewportId=0x72670A1A
-Size=786,491
+Size=889,307
 Collapsed=0
 
 [Window][XSens Read 1]
-ViewportPos=159,-890
+ViewportPos=1058,-212
 ViewportId=0xF679ED96
-Size=787,420
+Size=673,99
 Collapsed=0
 
 [Window][XSens Leo 1]
-ViewportPos=160,-471
+ViewportPos=1065,-111
 ViewportId=0xE44A13D8
-Size=783,447
+Size=677,58
 Collapsed=0
 
+[Window][]
+Size=32,95
+Collapsed=0
+
+[Window][State 1]
+ViewportPos=75,13
+ViewportId=0xD4B39271
+Size=397,207
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][State 2]
+ViewportPos=75,13
+ViewportId=0xD4B39271
+Pos=399,0
+Size=393,207
+Collapsed=0
+DockId=0x00000012,0
+
+[Window][State 3]
+ViewportPos=75,13
+ViewportId=0xD4B39271
+Pos=0,209
+Size=400,202
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][State 4]
+ViewportPos=75,13
+ViewportId=0xD4B39271
+Pos=402,209
+Size=390,202
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][State 5]
+ViewportPos=75,13
+ViewportId=0xD4B39271
+Pos=0,413
+Size=399,199
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][State 6]
+ViewportPos=75,13
+ViewportId=0xD4B39271
+Pos=401,413
+Size=391,199
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][State 7]
+ViewportPos=75,13
+ViewportId=0xD4B39271
+Pos=0,614
+Size=396,182
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][State 8]
+ViewportPos=75,13
+ViewportId=0xD4B39271
+Pos=398,614
+Size=394,182
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Xsens Data]
+ViewportPos=1019,599
+ViewportId=0xA3171B97
+Size=32,39
+Collapsed=0
+
+[Window][Signal Control]
+ViewportPos=75,13
+ViewportId=0xD4B39271
+Pos=0,798
+Size=792,196
+Collapsed=0
+DockId=0x00000014,0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=430,152 Size=872,471 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=615,212 Selected=0xD496095D
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=615,91 Selected=0x19982A4F
+DockNode            ID=0x00000001 Pos=830,541 Size=889,467 Split=Y
+  DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=615,328 Selected=0xD496095D
+  DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=615,141 Selected=0x19982A4F
+DockNode            ID=0x00000004 Pos=75,13 Size=792,994 Split=Y
+  DockNode          ID=0x00000013 Parent=0x00000004 SizeRef=792,796 Split=Y
+    DockNode        ID=0x0000000D Parent=0x00000013 SizeRef=619,207 Split=X Selected=0xD5AB27E6
+      DockNode      ID=0x0000000F Parent=0x0000000D SizeRef=310,316 Selected=0xD5AB27E6
+      DockNode      ID=0x00000012 Parent=0x0000000D SizeRef=307,316 Selected=0x4CA2765C
+    DockNode        ID=0x0000000E Parent=0x00000013 SizeRef=619,587 Split=Y
+      DockNode      ID=0x0000000B Parent=0x0000000E SizeRef=608,202 Split=X Selected=0x3BA546CA
+        DockNode    ID=0x00000010 Parent=0x0000000B SizeRef=307,116 Selected=0x3BA546CA
+        DockNode    ID=0x00000011 Parent=0x0000000B SizeRef=299,116 Selected=0xA5C1D369
+      DockNode      ID=0x0000000C Parent=0x0000000E SizeRef=608,383 Split=Y
+        DockNode    ID=0x00000007 Parent=0x0000000C SizeRef=299,199 Split=X Selected=0xD2C6E3FF
+          DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=150,206 Selected=0xD2C6E3FF
+          DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=147,206 Selected=0x4BCFB245
+        DockNode    ID=0x00000008 Parent=0x0000000C SizeRef=299,182 Split=X Selected=0x3CC882D3
+          DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=304,209 Selected=0x3CC882D3
+          DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=302,209 Selected=0xAC779F42
+  DockNode          ID=0x00000014 Parent=0x00000004 SizeRef=792,196 Selected=0x9FD1CA8F
 
