--- a/imgui.ini
+++ b/imgui.ini
@@ -11,22 +11,22 @@ Size=588,404
 Collapsed=1
 
 [Window][ControlPanel]
-ViewportPos=960,548
+ViewportPos=1036,532
 ViewportId=0xA4D966FE
-Size=889,230
+Size=889,295
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][LOG]
-ViewportPos=960,548
+ViewportPos=1036,532
 ViewportId=0xA4D966FE
-Pos=0,232
-Size=889,235
+Pos=0,297
+Size=889,169
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][EposEXO CAN 1]
-ViewportPos=1053,39
+ViewportPos=1090,-208
 ViewportId=0x70428EA5
 Size=568,200
 Collapsed=0
@@ -38,115 +38,127 @@ Size=128,48
 Collapsed=0
 
 [Window][MarkovMao 1]
-ViewportPos=57,633
-ViewportId=0x1F07AB3F
-Size=855,298
+ViewportPos=162,-332
+ViewportId=0xBAAF93A6
+Size=525,298
 Collapsed=0
+DockId=0x00000016,0
 
 [Window][ATIMX 1]
-ViewportPos=1005,205
+ViewportPos=1037,220
 ViewportId=0x72670A1A
 Size=889,307
 Collapsed=0
 
 [Window][XSens Read 1]
-ViewportPos=571,-626
-ViewportId=0xF679ED96
-Size=888,508
+ViewportPos=968,-848
+ViewportId=0xC41EEF1B
+Size=888,448
 Collapsed=0
+DockId=0x00000019,0
 
 [Window][XSens Leo 1]
-ViewportPos=554,-701
-ViewportId=0xE44A13D8
-Size=895,58
+ViewportPos=968,-848
+ViewportId=0xC41EEF1B
+Pos=0,450
+Size=888,58
 Collapsed=0
+DockId=0x0000001A,0
 
 [Window][]
 Size=32,95
 Collapsed=0
 
 [Window][State 1]
-ViewportPos=162,151
+ViewportPos=108,8
 ViewportId=0xD4B39271
-Size=397,207
+Size=373,203
 Collapsed=0
 DockId=0x0000000F,0
 
 [Window][State 2]
-ViewportPos=162,151
+ViewportPos=108,8
 ViewportId=0xD4B39271
-Pos=399,0
-Size=393,207
+Pos=375,0
+Size=369,203
 Collapsed=0
 DockId=0x00000012,0
 
 [Window][State 3]
-ViewportPos=162,151
+ViewportPos=108,8
 ViewportId=0xD4B39271
-Pos=0,209
-Size=400,202
+Pos=0,205
+Size=376,198
 Collapsed=0
 DockId=0x00000010,0
 
 [Window][State 4]
-ViewportPos=162,151
+ViewportPos=108,8
 ViewportId=0xD4B39271
-Pos=402,209
-Size=390,202
+Pos=378,205
+Size=366,198
 Collapsed=0
 DockId=0x00000011,0
 
 [Window][State 5]
-ViewportPos=162,151
+ViewportPos=108,8
 ViewportId=0xD4B39271
-Pos=0,413
-Size=399,199
+Pos=0,405
+Size=375,194
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][State 6]
-ViewportPos=162,151
+ViewportPos=108,8
 ViewportId=0xD4B39271
-Pos=401,413
-Size=391,199
+Pos=377,405
+Size=367,194
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][State 7]
-ViewportPos=162,151
+ViewportPos=108,8
 ViewportId=0xD4B39271
-Pos=0,614
-Size=396,182
+Pos=0,601
+Size=372,178
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][State 8]
-ViewportPos=162,151
+ViewportPos=108,8
 ViewportId=0xD4B39271
-Pos=398,614
-Size=394,182
+Pos=374,601
+Size=370,178
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Xsens Data]
-ViewportPos=126,429
+ViewportPos=1037,-16
 ViewportId=0xA3171B97
-Size=1640,786
+Size=862,237
 Collapsed=0
 
 [Window][Signal Control]
-ViewportPos=162,151
+ViewportPos=108,8
 ViewportId=0xD4B39271
-Pos=0,798
-Size=792,196
+Pos=0,781
+Size=744,192
 Collapsed=0
 DockId=0x00000014,0
 
+[Window][XSens  Gait Phase 1]
+ViewportPos=162,-332
+ViewportId=0xBAAF93A6
+Pos=527,0
+Size=345,298
+Collapsed=0
+DockId=0x00000017,0
+
 [Docking][Data]
-DockNode            ID=0x00000001 Pos=960,548 Size=889,467 Split=Y
-  DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=889,230 Selected=0xD496095D
-  DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=889,235 Selected=0x19982A4F
-DockNode            ID=0x00000004 Pos=162,151 Size=792,994 Split=Y
+DockNode            ID=0x00000001 Pos=1036,532 Size=889,466 Split=Y
+  DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=889,295 Selected=0xD496095D
+  DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=889,169 Selected=0x19982A4F
+DockNode            ID=0x00000004 Pos=108,8 Size=744,973 Split=Y
   DockNode          ID=0x00000013 Parent=0x00000004 SizeRef=792,796 Split=Y
     DockNode        ID=0x0000000D Parent=0x00000013 SizeRef=619,207 Split=X Selected=0xD5AB27E6
       DockNode      ID=0x0000000F Parent=0x0000000D SizeRef=310,316 Selected=0xD5AB27E6
@@ -163,4 +175,10 @@ DockNode            ID=0x00000004 Pos=162,151 Size=792,994 Split=Y
           DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=304,209 Selected=0x3CC882D3
           DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=302,209 Selected=0xAC779F42
   DockNode          ID=0x00000014 Parent=0x00000004 SizeRef=792,196 Selected=0x9FD1CA8F
+DockNode            ID=0x00000015 Pos=162,-332 Size=872,298 Split=X
+  DockNode          ID=0x00000016 Parent=0x00000015 SizeRef=525,298 Selected=0x1F07AB3F
+  DockNode          ID=0x00000017 Parent=0x00000015 SizeRef=345,298 Selected=0x387E616A
+DockNode            ID=0x00000018 Pos=968,-848 Size=888,508 Split=Y
+  DockNode          ID=0x00000019 Parent=0x00000018 SizeRef=888,448 Selected=0xF679ED96
+  DockNode          ID=0x0000001A Parent=0x00000018 SizeRef=888,58 Selected=0xE44A13D8
 
