David new thread

--- a/imgui.ini
+++ b/imgui.ini
@@ -11,14 +11,14 @@ Size=588,404
 Collapsed=1
 
 [Window][ControlPanel]
-ViewportPos=1036,532
+ViewportPos=526,300
 ViewportId=0xA4D966FE
 Size=889,295
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][LOG]
-ViewportPos=1036,532
+ViewportPos=526,300
 ViewportId=0xA4D966FE
 Pos=0,297
 Size=889,169
@@ -26,7 +26,7 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][EposEXO CAN 1]
-ViewportPos=1090,-208
+ViewportPos=115,81
 ViewportId=0x70428EA5
 Size=568,200
 Collapsed=0
@@ -40,7 +40,7 @@ Collapsed=0
 [Window][MarkovMao 1]
 ViewportPos=162,-332
 ViewportId=0xBAAF93A6
-Size=525,298
+Size=872,298
 Collapsed=0
 DockId=0x00000016,0
 
@@ -147,15 +147,20 @@ Collapsed=0
 DockId=0x00000014,0
 
 [Window][XSens  Gait Phase 1]
-ViewportPos=162,-332
+ViewportPos=121,33
 ViewportId=0xBAAF93A6
-Pos=527,0
-Size=345,298
+Size=872,298
 Collapsed=0
 DockId=0x00000017,0
 
+[Window][EXO Squat David]
+ViewportPos=166,470
+ViewportId=0x796D014C
+Size=272,201
+Collapsed=0
+
 [Docking][Data]
-DockNode            ID=0x00000001 Pos=1036,532 Size=889,466 Split=Y
+DockNode            ID=0x00000001 Pos=526,300 Size=889,466 Split=Y
   DockNode          ID=0x00000002 Parent=0x00000001 SizeRef=889,295 Selected=0xD496095D
   DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=889,169 Selected=0x19982A4F
 DockNode            ID=0x00000004 Pos=108,8 Size=744,973 Split=Y
@@ -175,7 +180,7 @@ DockNode            ID=0x00000004 Pos=108,8 Size=744,973 Split=Y
           DockNode  ID=0x00000005 Parent=0x00000008 SizeRef=304,209 Selected=0x3CC882D3
           DockNode  ID=0x00000006 Parent=0x00000008 SizeRef=302,209 Selected=0xAC779F42
   DockNode          ID=0x00000014 Parent=0x00000004 SizeRef=792,196 Selected=0x9FD1CA8F
-DockNode            ID=0x00000015 Pos=162,-332 Size=872,298 Split=X
+DockNode            ID=0x00000015 Pos=121,33 Size=872,298 Split=X
   DockNode          ID=0x00000016 Parent=0x00000015 SizeRef=525,298 Selected=0x1F07AB3F
   DockNode          ID=0x00000017 Parent=0x00000015 SizeRef=345,298 Selected=0x387E616A
 DockNode            ID=0x00000018 Pos=968,-848 Size=888,508 Split=Y
